# innerstack

./: .gitignore  .gitmodules  Makefile  README.md  README.zh-CN.md  go.mod  go.sum
api/inapi/: app.proto  common.proto  config.proto  gateway.proto  host.proto  metrics.proto  package.proto  service.proto  stat.proto  zone.proto
cmd/cli/: host-join.go  info.go  main.go  utils.go  zone-init.go
cmd/cli2/: main.go
cmd/inagent/: inagent.go  ininit  main.go
cmd/inagent-slim/: CMakeLists.txt  Dockerfile  Dockerfile.base  README.md
cmd/inagent-slim/src/: main.cpp
cmd/inagent-slim/src/config/: app_config.cpp  app_config.h
cmd/inagent-slim/src/config_merge/: merger.cpp  merger.h
cmd/inagent-slim/src/daemon/: daemon.cpp  daemon.h
cmd/inagent-slim/src/log/: logger.cpp  logger.h
cmd/inagent-slim/src/model/: types.cpp  types.h
cmd/inagent-slim/src/signal/: signal_handler.cpp  signal_handler.h
cmd/inagent-slim/src/status/: reporter.cpp  reporter.h
cmd/inagent-slim/src/task/: cron.cpp  cron.h  engine.cpp  engine.h  executor.h
cmd/inagent-slim/src/template/: render.cpp  render.h  var_params.cpp  var_params.h
cmd/inagent-slim/src/util/: fs.cpp  fs.h  string_util.cpp  string_util.h  time_util.cpp  time_util.h
cmd/inagent-slim/toolchain/: linux-amd64.cmake  linux-arm64.cmake
cmd/indns/: indnsd.default.toml  main.go  systemd.service
cmd/ingate/: main.go  systemd.service
config/: config.go  data.go  init.go
data/: data.go
doc/: install.md
etc/: config.json.tpl  config.tpl.json
i18n/: en.json  zh-CN.json
inapi/: app.go  app.pb.go  cluster.pb.go  common.pb.go  config.pb.go  const.go  executor.go  gateway.pb.go  host.pb.go  kv.go  ns.go  package.pb.go  pb.objs.go  pod.pb.go  service.pb.go  service_grpc.pb.go  stat.pb.go  valid.go  valid_test.go  zone.pb.go
status/: status.go
v2/: go.mod
webui/: about.tpl
zonemaster/: tracker.go
(+263 files in other folders)
